# youtube_live_adapter

./: README.md  __init__.py  config.py  manifest.json  plugin.py  pyproject.toml
.agents/: permissions.json
.agents/context/: 20260612_134105_YouTube_Live_Adapter_实施计划.md  20260612_193011_YouTube_Live_Adapter_实施计划_修订版_.md  20260612_203409_YouTube_Live_Adapter_实施计划_最终版_.md  20260612_215743_YouTube_Live_Adapter_实施计划.md  20260613_014806_YouTube_Live_Adapter___剩余文件实施计划.md  20260613_023825_YouTube_Live_Adapter_修复与完善计划.md  20260613_032046_重写_README_md_为详细教程式文档.md  20260613_042301_YouTube_Live_Adapter_出站消息能力实施计划.md  20260613_150558_YouTube_Live_Adapter_出站可选化改造.md  20260613_151359_YouTube_Live_Adapter_双向能力完善.md  20260613_155546_YouTube_Live_Adapter_双向能力完善_最终版_.md  20260613_174453_YouTube_Live_Adapter_双向能力完善___剩余项实施.md  20260613_181939_YouTube_Live_Adapter_双向能力完善___剩余项实施.md  20260613_200123_YouTube_Adapter_出入站流程补全.md  metadata.json  project_overview.json
.agents/context/sessions/: 40bd0984-65ec-4e12-9e50-853dd8b807e2.json  4e9b4f63-c832-428d-994f-e7a8889d1e43.json  820ed243-369c-448d-8b15-967a169fd65c.json  9b045beb-9812-43cd-a6ee-55a6b89c1acb.json  d1f6eaa6-b17f-44b0-bf8d-d3a9917c5084.json  d2cb8638-23b5-491b-a88a-a33d5275f077.json
src/: __init__.py  api.py  client.py  currency.py  dispatcher.py  sender.py
tests/: conftest.py  test_api.py  test_client.py  test_currency.py  test_dispatcher.py  test_sender.py
