[project]
name = "youtube-live-adapter"
version = "0.1.0"
description = "YouTube 直播间弹幕/SC/会员消息接入适配器"
authors = [{ name = "MoFox Team" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF001",  # ambiguous characters in Chinese strings
    "RUF002",  # ambiguous characters in Chinese docstrings
    "RUF003",  # ambiguous characters in Chinese comments
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
venvPath = "."
exclude = [
    "tests/**",
]
